[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
env_logger = "0.9.0"
gloo-net = "^0.2"
log = "^0.4"
wasm-bindgen-futures = "^0.4"
wasm-logger = "0.2.0"
yew = "0.19.3"
yew-router = "0.16.0"
