[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.2"
clap = { version = "4.0.32", features = ["derive"] }
tokio = { version = "1.24.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

